# peewee-migration-runner

./: README.md  migration_runner.py  peewee_migration_runner.py  pyproject.toml
tests/: test_runner.py
