[tool.poetry]
name = "migration-runner"
version = "0.1.0"
description = "Runs peewee migrations"
authors = ["Dan Schaub <dan@seaweedgeneration.com>"]
readme = "README.md"
packages = [{include = "migration_runner"}]

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
