[tool.poetry]
name = "peewee-migration-runner"
version = "0.1.0"
description = "Runs peewee migrations"
authors = ["Dan Schaub <dan@seaweedgeneration.com>"]
readme = "README.md"
include = ["peewee_migration_runner.py"]

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
