[tool.poetry]
name = "peewee-migration-runner"
version = "0.2.0"
description = "Runs peewee migrations"
authors = ["Dan Schaub <dan@seaweedgeneration.com>"]
readme = "README.md"
include = ["peewee_migration_runner.py"]

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
